# cmake-tutorial

./: README.md
add_custom_command/: CMakeLists.txt
re_define_file_relative_path/: README.md  util.cmake
